# CudaHybridComputing

./: README.md
Work_1/: .clangd  .gitignore  CMakeLists.txt
Work_1/benchmark/: CMakeLists.txt  perf_benchmark.cu
Work_1/core/: CMakeLists.txt
Work_1/core/includes/: vector_add.cuh
Work_1/core/src/: vector_add.cu
Work_1/tests/: CMakeLists.txt  unit_tests.cpp
Work_2/: CMakeLists.txt
Work_2/benchmark/: CMakeLists.txt
Work_2/benchmark/src/: perf_benchmark.cu
Work_2/core/: CMakeLists.txt
Work_2/core/includes/: matrix.cuh  matrix_multiply.cuh
Work_2/core/src/: kernel.cu  matrix.cu  matrix_multiply.cu
Work_2/tests/: CMakeLists.txt
Work_2/tests/src/: unit_tests.cpp
Work_3/: .gitignore  CMakeLists.txt
Work_3/benchmark/: CMakeLists.txt
Work_3/benchmark/src/: perf_benchmark.cu
Work_3/core/: CMakeLists.txt
Work_3/core/includes/: kernels.cuh  matrix.cuh  matrix_view.cuh
Work_3/core/src/: kernel.cu  matrix.cu
Work_3/tests/: CMakeLists.txt
Work_4/: .clang-format  .clang-tidy
Work_4/benchmark/: CMakeLists.txt
Work_4/benchmark/src/: perf_benchmark.cu
Work_4/core/: CMakeLists.txt
Work_4/core/includes/: data.cuh  kernels.cuh  matrix_view.cuh
Work_4/core/src/: kernel.cu  matrix.cu
Work_4/core/src/kernels/: matmul_shmem_kernel.cu
Work_4/core/src/launch/: matmul_wmma_launch.cu
Work_4/tests/: CMakeLists.txt
Work_4/tests/src/: unit_tests.cpp
Work_5/: CMakeLists.txt
Work_5/benchmark/src/: perf_benchmark.cu
Work_5/core/: CMakeLists.txt
Work_5/core/includes/: kernels.cuh  vecred_utils.cuh
Work_5/core/src/: data.cu  matrix_view.cu
Work_5/core/src/kernels/: matmul_wmma_kernel.cu  vecred_br_kernel.cu  vecred_kernels.cu  vecred_nobr_kernel.cu
Work_5/core/src/launch/: matmul_shmem_launch.cu  vecred_br_launch.cu  vecred_nobr_launch.cu  vecred_reduce_utils.cu
Work_5/tests/: CMakeLists.txt
Work_5/tests/src/: unit_tests.cpp
